--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,11 +1,38 @@
 /* CSS Document */
 
+@media (max-width: 1050px) {
+	div#menu > ul {
+		flex-direction: column;
+	}
+
+	body > div#menu > ul > li.selected > a,
+	body > div#menu > ul > li > a.active,
+	body > div#menu > ul > li > a {
+		width: 100%;
+	}
+
+	/** Too lazy to display the image **/
+	/** Distracting on mobile anyway **/
+	div.main > div.background-image {
+		display: none;
+	}
+
+	body > div.main > div.tabcontents {
+		background-color: white;
+		position: static;
+		padding: 0 50px;
+		padding-bottom: 25px;
+		min-height: 0;
+	}
+}
+
 html {
-   height: 1200px;
+	height: 1200px;
 }
 
 body {
-	width: 1050px;
+	width: 100%;
+	max-width: 1050px;
 	margin: auto;
 	height: 100%;
 	background-repeat: repeat-x;
@@ -15,127 +42,41 @@ body {
 }
 
 
-#header {
-	height: 140px;
-	width: 1050px;
+div#header {
+	height: auto;
+	max-height: 140px;
+	width: 100%;
+	max-width: 1050px;
 	padding-top: 2px;
 	/*background-color:#520E0E*/
 }
 
-
-#menu {
-	height: 30px;
-	width: 1050px;
-	margin: 0;
-
-}
-li.hidden{
-	visibility: hidden;
-}
-#main {
-	width: 1050px;
-	height: 100%;
-	background-color:#651515
-	/*background-image: url(Images/Web.png);
-		background-repeat: no-repeat;*/
-	float: left;
-	overflow: auto;
-}
-#tabcontents {
-	width: 100px;
-	height: 100%;
-	background-color:#651515
-	float: left;
-	overflow: auto;
-}
-
-#p1 {
-	font-family: Verdana, Arial, Helvetica, sans-serif;
-	font-family: Georgia, "Times New Roman", Times, serif;
-	font-size: 14px;
-	line-height: 150%;
-	padding-right: 150px;
-	padding-left: 150px;
-	text-align: justify;
-	position: relative;
-	color: #ffffff;
-	font-weight: 500;
-	overflow: auto;
-	padding-top: 25px;
-	height: 100%;
-	clear: both;
-}
-
-div.tabcontents {
-	font-family: Verdana, Arial, Helvetica, sans-serif;
-	/*font-family: Georgia, "Times New Roman", Times, serif; */
-	font-size: 13px;
-	line-height: 150%;
-	padding-right: 410px;
-	padding-left: 75px;
-	text-align: left;
-	position: relative;
-
-	background-color: #ffffff;
-	background-image: url(../images/Web.png) ;
-	background-size: 75%;
-	background-repeat: no-repeat;
-	background-position: right 50px;
-
-
-	font-weight: 500;
-	overflow: auto;
-	padding-top: 25px;
+div#header img {
 	height: auto;
-	min-height: 900px;
-	clear: both;
-	overflow: hidden;
-
-
-
-	/*color:#651515*/
-	color:#000000
+	width: 100%;
+	max-width: 1050px;
 }
 
-div.noscroll {
-	overflow:hidden;
+div#menu {
+	width: 100%;
+	max-width: 1050px;
+	margin: 0;
 }
 
-#menu ul {
-margin: 0;
-list-style: none;
-padding: 0;
+div#menu > ul {
+	margin: 0;
+	list-style: none;
+	padding: 0;
+	font-size: 0px;
+	display: flex;
 }
 
-#menu li {
-float: left;
-}
-#menu a:hover {
-	color: #000000;
-	background-image: url(../images/backgrounds/nav2.png);
-}
-#menu li a.active {
-	width: 150px;
-	background-image: url(../images/backgrounds/nav2.png);
+div#menu > ul > li {
+	flex: 1;
+	display: inline-block;
 }
 
-#menu li.selected a {
-	width: 150px;
-	color: #000000;
-	background-image: url(../images/backgrounds/nav2.png);
-}
-
-#menu li a.hidden {
-	width: 0px;
-	display: hidden;
-}
-
-#menu li a.sub {
-	background-color: #651515
-}
-
-
-#menu a {
+div#menu > ul > li > a {
 	text-decoration: none;
 	display: block;
 	width: 150px;
@@ -158,94 +99,88 @@ float: left;
 	border-bottom-color: #ffffff;
 }
 
+div#menu > ul > li > a:hover {
+	color: #000000;
+	background-image: url(../images/backgrounds/nav2.png);
+}
 
+div#menu > ul > li > a.active {
+	width: 150px;
+	background-image: url(../images/backgrounds/nav2.png);
+}
 
-#link a {
-	width: 50px;
-	color:  #000;
+div#menu > ul > li.selected > a {
+	color: #000000;
+	background-image: url(../images/backgrounds/nav2.png);
+}
+
+div#menu > ul > li > a.hidden {
+	display: hidden;
+}
+
+div#menu > ul > li > a.sub {
+	background-color: #651515
+}
+
+div.main {
+	position: relative;
+}
+
+div.main > div.background-image {
+	width: 100%;
+	min-height: 900px;
+	position: relative;
+	background-color: white;
+}
+
+div.main > div.background-image > img {
+	width: 100%;
+	height: auto;
+	max-width: calc(1020px * .75);
+	position: absolute;
+	margin-top: 50px;
+	right: 0;
+}
+
+div.main > div.tabcontents {
+	font-family: Verdana, Arial, Helvetica, sans-serif;
+	/*font-family: Georgia, "Times New Roman", Times, serif; */
 	font-size: 13px;
+	line-height: 150%;
+	padding-right: 410px;
+	padding-left: 75px;
+	text-align: left;
+	position: relative;
+
 	font-weight: 500;
-	text-decoration: none;
-	border-bottom-width: thin;
-	border-bottom-style: solid;
-	border-bottom-color:  #000;
+	overflow: auto;
+	padding-top: 25px;
+	height: auto;
+	min-height: 900px;
+	clear: both;
+	overflow: hidden;
+
+	/*color:#651515*/
+	color:#000000
+
+	background-image: url(../images/Web.png);
+	background-size: 75%;
+	background-repeat: no-repeat;
+	background-position: right 50px;
+	position: absolute;
+	top: 0;
+	left: 0;
 }
 
-#link a:hover {
-	color:#ffffff;
-	font-weight: 500;
-	text-decoration: none;
-	border-bottom-width: thin;
-	border-bottom-style: solid;
-	border-bottom-color: #ffffff;
-	font-size: 14px;
-}
-.link a {
-	width: 50px;
-	color:  #ffffff;
-	font-size: 13px;
-	font-weight: 400;
-	text-decoration: underline;
-
+div.main > div.tabcontents > div {
+	z-index: 2
 }
 
-.link a:hover {
-	color:#060;
-	font-weight: 400;
-	text-decoration: underline;
-	font-size: 13px;
-}
-#link1 a {
-	font-family:Verdana, Arial, Helvetica, sans-serif;
-	font-size:11px;
-	color:#ffffff;
-	text-align: center;
-	text-decoration: underline;
-}
-#link1 a:hover {
-	color:#ffffff;
-	font-family:Verdana, Arial, Helvetica, sans-serif;
-	font-size:11px;
-	font-weight: normal;
-	text-decoration: underline;
+/** Not sure selectors **/
+li.hidden{
+	visibility: hidden;
 }
 
-#link2 a {
-
-	font-family: Georgia, "Times New Roman", Times, serif;
-	font-family:Verdana, Arial, Helvetica, sans-serif;
-	font-size:9px;
-	color:#ffffff;
-	text-decoration: underline;
-	width: 980px;
-	text-align: right;
+div.noscroll {
+	overflow: hidden;
 }
-#link2 a:hover {
-	color:#060;
-	font-family:Verdana, Arial, Helvetica, sans-serif;
-	font-size:9px;
-	font-weight: normal;
-	text-decoration: underline;
-}
-
-.link3 a {
-	text-decoration: underline;
-	color:#ffffff;
-	font-weight: bold;
-}
-.link3 a:hover {
-	text-decoration: underline;
-	color: #060;
-}
-
-
-.link a {
-	width: 1050px;
-}
-
-a.handig{
-	color:#651515;
-	font-weight:normal;
-
-}
-
