--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -6,6 +6,11 @@ layout: default
   {% include banner.html %}
 
   <main class="page-content" aria-label="Content">
+
+  <div id="intro">
+  <p> EAH zorgt voor verantwoorde begeleiding van mensen die een visum nodig hebben om te werken, studeren of permanent te wonen in Australië of Canada. Ook voor overige landen bieden wij op-maat begeleiding.</p>
+
+  </div>
   <section class="chapters cf">
       <div class="wrapper flex-row">
       {{ content }}
