--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -8,7 +8,7 @@ layout: default
   <main class="page-content" aria-label="Content">
 
   <div id="intro">
-  <p> EAH zorgt voor verantwoorde begeleiding van mensen die een visum nodig hebben om te werken, studeren of permanent te wonen in Australië of Canada. Ook voor overige landen bieden wij op-maat begeleiding.</p>
+  <p> EAH zorgt voor verantwoorde begeleiding van mensen die een visum nodig hebben om te werken, studeren of permanent te wonen in Australië, Canada, Nieuw Zeeland of de Verenigde Staten. Ook voor overige landen bieden wij op-maat begeleiding.</p>
 
   </div>
   <section class="chapters cf">
