--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -14,10 +14,16 @@
       <!-- The slideshow -->
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="assets/img/banner1.jpg" alt="Los Angeles">
+          <img src="assets/img/banner/banner1.jpg" alt="Los Angeles"/>
         </div>
         <div class="carousel-item">
-          <img src="assets/img/banner2.jpg" alt="Chicago">
+          <img src="assets/img/banner/CanadaTorontoSkyline_scaled.jpg" alt="Sydney skyline"/>
+        </div>
+        <div class="carousel-item">
+          <img src="assets/img/banner/AustraliaKangaroo_scaled.jpg" alt="Chicago"/>
+        </div>
+        <div class="carousel-item">
+          <img src="assets/img/banner/AustraliaSydneySkyline_scaled.jpg" alt="Sydney skyline"/>
         </div>
       </div>
 
@@ -37,5 +43,3 @@
     </div>
   </div>
 </section> <!-- End Section Banner -->
-
-
