--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,12 @@
 <header class="main_header">
   <a href="{{site.baseurl}}/" class="logo">{% if site.logo %}{{site.logo}}{% else %}E<span>AH</span>{% endif %}</a>
   <nav class="main_menu">
-    <a href="{{site.baseurl}}/about/">About</a>
+    <a href="{{site.baseurl}}/australia/">Australie</a>
+    <a href="{{site.baseurl}}/canada/">Canada</a>
+    <a href="{{site.baseurl}}/new-zealand/">Nieuw-Zeeland</a>
+    <a href="{{site.baseurl}}/united-states/">Verenigde Staten</a>
+    <a href="{{site.baseurl}}/chinaentaiwan/">China en Taiwan</a>
     <a href="{{site.baseurl}}/contact/">Contact</a>
+
   </nav>
 </header> <!-- End Section Header -->
