banner aangepast en tekst op main page

--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -17,13 +17,13 @@
           <img src="assets/img/banner/banner1.jpg" alt="Los Angeles"/>
         </div>
         <div class="carousel-item">
-          <img src="assets/img/banner/CanadaTorontoSkyline_scaled.jpg" alt="Sydney skyline"/>
-        </div>
-        <div class="carousel-item">
-          <img src="assets/img/banner/AustraliaKangaroo_scaled.jpg" alt="Chicago"/>
-        </div>
+          <img src="assets/img/banner/CanadaTorontoSkyline.jpg" alt="Sydney skyline"/>
+        </div>        
         <div class="carousel-item">
           <img src="assets/img/banner/AustraliaSydneySkyline_scaled.jpg" alt="Sydney skyline"/>
+        </div>
+        <div class="carousel-item">
+          <img src="assets/img/banner/NZAucklandbanner.jpg" alt="Chicago"/>
         </div>
       </div>
 
@@ -38,7 +38,9 @@
     <!--</div>-->
     <div class="wrapper">
     <div class="content" style="position:absolute; top:5px; z-index:999;">
-      <h1 class="title">{% if site.banner-title %}{{ site.banner-title }}{% else %}Emigratie Adviesbureau Hiltemann{% endif %}</h1>
+      <h1 class="title">{% if site.banner-title %}{{ site.banner-title }}{% else %}Emigratie Adviesbureau Hiltemann</br>
+        <p>Thuis in het buitenland</p>{% endif %}</h1>
+
     </div>
   </div>
 </section> <!-- End Section Banner -->
