--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -3,12 +3,34 @@ layout: default
 ---
   {% include header.html %}
 
-  {% include banner.html %}
+  {% include banner.html %}<br/>
 
   <main class="page-content" aria-label="Content">
 
   <div id="intro">
-  <p> EAH zorgt voor verantwoorde begeleiding van mensen die een visum nodig hebben om te werken, studeren of permanent te wonen in Australië, Canada, Nieuw Zeeland, de Verenigde Staten, of China en Taiwan. Ook voor overige landen bieden wij op-maat begeleiding.</p>
+  <p>EAH zorgt voor verantwoorde begeleiding van mensen die een visum nodig hebben om te werken, studeren of permanent te wonen in Australië, Canada, Nieuw Zeeland, de Verenigde Staten, of China en Taiwan. Ook voor overige landen bieden wij op-maat begeleiding. Klik voor meer informatie hieronder op het desgewenste land.</p>
+
+  <p> EAH biedt verscheidene diensten, onder andere:<p/>
+
+  <p> Volledige Visum Aanvraag<br/>
+      Efficiënte begeleiding en een gerichte belangenbehartiging bij de visumaanvraag in het kader van de wetgeving van het betreffende land.<p/>
+
+  <p> Visum Check<br/>
+      Wilt u weten of u in aanmerking komt voor emigratie naar Australië or Canada? Stuur vrijblijvend uw CV op, en wij beoordelen uw kansen binnen een week.<p/>
+
+  <p> Begeleiding voor bedrijven<br/>
+            Begeleiding bij het opzetten van een bedrijf of zaken doen in het buitenland.<p/>
+
+  <p> Beperkte begeleiding voor doe-het-zelvers<br/>
+      Doet u de aanvraag liever zelf? Wij bieden ook op-maat begeleiding op uurbasis.<p/>
+
+  <p> Overige landen<br/>
+      We zoeken alles voor u uit en helpen op een ad-hoc basis. We stellen samen met u een traject en tarief vast.<p/>
+
+  <p> En nog veel meer...Bekijk de volledige lijst hier.<p/>
+
+  <p> Voor meer informatie kunt u hieronder op het gewenste land klikken.<br/>
+      Heeft u interesse in een van onze diensten? Neem dan contact met ons op.</p><color/>
 
   </div>
   <section class="chapters cf">
