--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 
 <header class="main_header">
-  <a href="{{site.baseurl}}/" class="logo">{% if site.logo %}{{site.logo}}{% else %}E<span>AH</span>{% endif %}</a>
+  <a href="{{site.baseurl}}/" class="logo">{% if site.logo %}{{site.logo}}{% else %}E<span>AH</span> Thuis in het buitenland{% endif %}</a>
   <nav class="main_menu">
     <a href="{{site.baseurl}}/australia/">Australie</a>
     <a href="{{site.baseurl}}/canada/">Canada</a>
