page over canada aangepast

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -8,7 +8,7 @@ layout: default
   <main class="page-content" aria-label="Content">
 
   <div id="intro">
-  <p>EAH zorgt voor verantwoorde begeleiding van mensen die een visum nodig hebben om te werken, studeren of permanent te wonen in Australië, Canada, Nieuw Zeeland, de Verenigde Staten, of China en Taiwan. Ook voor overige landen bieden wij op-maat begeleiding. Klik voor meer informatie hieronder op het desgewenste land.</p>
+  <p>EAH zorgt voor verantwoorde begeleiding van mensen die een visum nodig hebben om te werken, studeren of permanent te wonen in Australië, Canada, Nieuw Zeeland, de Verenigde Staten, of China en Taiwan. Ook voor overige landen bieden wij op-maat begeleiding. Zowel voor particulieren als voor bedrijven. Klik voor meer informatie hieronder op het desgewenste land.</p>
 
   <p> EAH biedt verscheidene diensten, onder andere:<p/>
 
@@ -27,10 +27,13 @@ layout: default
   <p> Overige landen<br/>
       We zoeken alles voor u uit en helpen op een ad-hoc basis. We stellen samen met u een traject en tarief vast.<p/>
 
-  <p> En nog veel meer...Bekijk de volledige lijst hier.<p/>
+  <p> En nog veel meer...<br/>
+      Bekijk de volledige lijst *hier*.<p/>
 
-  <p> Voor meer informatie kunt u hieronder op het gewenste land klikken.<br/>
-      Heeft u interesse in een van onze diensten? Neem dan contact met ons op.</p><color/>
+  <p> Heeft u interesse in een van onze diensten? Neem dan *contact* met ons op.<p/>
+
+  <p> Voor meer informatie kunt u hieronder op het gewenste land klikken.<p/>
+
 
   </div>
   <section class="chapters cf">
