--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,6 +7,7 @@
     <a href="{{site.baseurl}}/new-zealand/">Nieuw-Zeeland</a>
     <a href="{{site.baseurl}}/united-states/">Verenigde Staten</a>
     <a href="{{site.baseurl}}/chinaentaiwan/">China en Taiwan</a>
+    <a href="{{site.baseurl}}/Diensten/">Diensten</a>
     <a href="{{site.baseurl}}/contact/">Contact</a>
 
   </nav>
