update bedrijven en diensten

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -8,7 +8,7 @@ layout: default
   <main class="page-content" aria-label="Content">
 
   <div id="intro">
-  <p>EAH zorgt voor verantwoorde begeleiding van mensen die een visum nodig hebben om te werken, studeren of permanent te wonen in Australië, Canada, Nieuw Zeeland, de Verenigde Staten, of China en Taiwan. Ook voor overige landen bieden wij op-maat begeleiding. Zowel voor particulieren als voor bedrijven. Klik voor meer informatie hieronder op het desgewenste land.</p>
+  <p>EAH zorgt voor verantwoorde begeleiding van mensen die een visum nodig hebben om te werken, studeren of permanent te wonen in Australië, Canada, Nieuw Zeeland, de Verenigde Staten, of China en Taiwan. Ook voor overige landen bieden wij op-maat begeleiding. Zowel voor particulieren als voor bedrijven.</p>
 
   <p> EAH biedt verscheidene diensten, onder andere:<p/>
 
@@ -16,23 +16,21 @@ layout: default
       Efficiënte begeleiding en een gerichte belangenbehartiging bij de visumaanvraag in het kader van de wetgeving van het betreffende land.<p/>
 
   <p> Visum Check<br/>
-      Wilt u weten of u in aanmerking komt voor emigratie naar Australië or Canada? Stuur vrijblijvend uw CV op, en wij beoordelen uw kansen binnen een week.<p/>
+      Wilt u weten of u in aanmerking komt voor emigratie naar Australie, Canada, Nieuw-Zeeland of de Verenigde Staten? Stuur vrijblijvend uw CV op, en wij beoordelen uw kansen binnen een week.<p/>
 
   <p> Begeleiding voor bedrijven<br/>
-            Begeleiding bij het opzetten van een bedrijf of zaken doen in het buitenland.<p/>
+      Begeleiding bij het opzetten van een bedrijf, het uitsturen van werknemers, of zaken doen in het buitenland.<p/>
 
   <p> Beperkte begeleiding voor doe-het-zelvers<br/>
       Doet u de aanvraag liever zelf? Wij bieden ook op-maat begeleiding op uurbasis.<p/>
 
   <p> Overige landen<br/>
-      We zoeken alles voor u uit en helpen op een ad-hoc basis. We stellen samen met u een traject en tarief vast.<p/>
-
-  <p> En nog veel meer...<br/>
-      Bekijk de volledige lijst *hier*.<p/>
+      Wij bieden op-maat advies bij verkenning van uw kansen om te kunnen emigreren naar overige bestemmingen. We zoeken alles voor u uit en helpen op een ad-hoc basis. We stellen samen met u een traject en tarief vast.
+<p/>
 
   <p> Heeft u interesse in een van onze diensten? Neem dan *contact* met ons op.<p/>
 
-  <p> Voor meer informatie kunt u hieronder op het gewenste land klikken.<p/>
+  <p> Klik voor meer informatie hieronder op het gewenste land.<p/>
 
 
   </div>
