--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -14,30 +14,29 @@
       <!-- The slideshow -->
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="assets/img/banner/banner1.jpg" alt="Los Angeles"/>
+          <img src="assets/img/banner/banner1.jpg" alt="maple leaf"/>
         </div>
         <div class="carousel-item">
-          <img src="assets/img/banner/AustraliaSydneySkyline_scaled.jpg" alt="Sydney skyline"/>
+          <img src="assets/img/banner/CanadaNaturebanner_scaled.jpg" alt="Chicago"/>
         </div>
         <div class="carousel-item">
-          <img src="assets/img/banner/NZMilfordSound3.jpg" alt="Sydney skyline"/>
+          <img src="assets/img/banner/AustraliaSydneySkyline_scaled2.jpg" alt="Sydney skyline"/>
         </div>
         <div class="carousel-item">
-          <img src="assets/img/banner/CanadaTorontoSkyline3_scaled.jpg" alt="Sydney skyline"/>
+          <img src="assets/img/banner/CanadaTorontoSkyline3_scaled.jpg" alt="Toronto skyline"/>
         </div>
         <div class="carousel-item">
-          <img src="assets/img/banner/USGoldenGateBridge.jpg" alt="Chicago"/>
+          <img src="assets/img/banner/NZMilfordSound3.jpg" alt="Milford Sound"/>
         </div>
         <div class="carousel-item">
-          <img src="assets/img/banner/ChinaShanghaiBanner2.jpg" alt="Chicago"/>
+          <img src="assets/img/banner/USGoldenGateBridge.jpg" alt="Golden Gate Bridge"/>
         </div>
         <div class="carousel-item">
-          <img src="assets/img/banner/NZWanakabanner.jpg" alt="Chicago"/>
+          <img src="assets/img/banner/ChinaShanghaiBanner2.jpg" alt="Shanghai"/>
         </div>
         <div class="carousel-item">
-          <img src="assets/img/banner/NZWellingtonSkyline_scaled.jpg" alt="Chicago"/>
+          <img src="assets/img/banner/AustraliaNaturebanner.jpg" alt="Australian Nature"/>
         </div>
-      </div>
 
       <!-- Left and right controls -->
       <a class="carousel-control-prev" href="#demo" data-slide="prev">
