hoop random veranderingen

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,8 +6,8 @@
     <a href="{{site.baseurl}}/canada/">Canada</a>
     <a href="{{site.baseurl}}/new-zealand/">Nieuw-Zeeland</a>
     <a href="{{site.baseurl}}/united-states/">Verenigde Staten</a>
-    <a href="{{site.baseurl}}/chinaentaiwan/">China en Taiwan</a>
-    <a href="{{site.baseurl}}/Diensten/">Diensten</a>
+    <a href="{{site.baseurl}}/chinaentaiwan/">China, Japan en Taiwan</a>
+    <a href="{{site.baseurl}}/Diensten/">Overige landen</a>
     <a href="{{site.baseurl}}/contact/">Contact</a>
 
   </nav>
