--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -8,9 +8,9 @@ layout: default
   <main class="page-content" aria-label="Content">
 
   <div id="intro">
-  <p>EAH zorgt voor verantwoorde begeleiding van mensen die een visum nodig hebben om te werken, studeren of permanent te wonen in Australië, Canada, Nieuw Zeeland, de Verenigde Staten, of China en Taiwan. Ook voor overige landen bieden wij op-maat begeleiding. Zowel voor particulieren als voor bedrijven.</p>
+  <p>EAH zorgt al meer dan 20 jaar voor verantwoorde begeleiding van particulieren en bedrijven die een visum nodig hebben om te werken, studeren of permanent te wonen in Australië, Canada, Nieuw-Zeeland, de Verenigde Staten, of China Japan en Taiwan. Ook voor overige landen bieden wij op-maat begeleiding..</p>
 
-  <p> EAH biedt verscheidene diensten, onder andere:<p/>
+  <p> EAH biedt onder andere de volgende diensten:<p/>
 
   <p> Volledige Visum Aanvraag<br/>
       Efficiënte begeleiding en een gerichte belangenbehartiging bij de visumaanvraag in het kader van de wetgeving van het betreffende land.<p/>
@@ -19,7 +19,7 @@ layout: default
       Wilt u weten of u in aanmerking komt voor emigratie naar Australie, Canada, Nieuw-Zeeland of de Verenigde Staten? Stuur vrijblijvend uw CV op, en wij beoordelen uw kansen binnen een week.<p/>
 
   <p> Begeleiding voor bedrijven<br/>
-      Begeleiding bij het opzetten van een bedrijf, het uitsturen van werknemers, of zaken doen in het buitenland.<p/>
+      Begeleiding bij het uitsturen van werknemers, het opzetten van een bedrijf, of zaken doen in het buitenland.<p/>
 
   <p> Beperkte begeleiding voor doe-het-zelvers<br/>
       Doet u de aanvraag liever zelf? Wij bieden ook op-maat begeleiding op uurbasis.<p/>
@@ -30,7 +30,7 @@ layout: default
 
   <p> Heeft u interesse in een van onze diensten? Neem dan *contact* met ons op.<p/>
 
-  <p> Klik voor meer informatie hieronder op het gewenste land.<p/>
+  <p> Of klik voor meer informatie hieronder op het gewenste land.<p/>
 
 
   </div>
