--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -49,7 +49,7 @@
     <!--</div>-->
     <div class="wrapper">
     <div class="content" style="position:absolute; top:5px; z-index:999;">
-      <h1 class="title">{% if site.banner-title %}{{ site.banner-title }}{% else %}Emigratie Adviesbureau Hiltemann</br>
+      <h1 class="title">{% if site.banner-title %}{{ site.banner-title }}{% else %}EmigratieAdviesbureauHiltemann</br>
         <p>Thuis in het buitenland</p>{% endif %}</h1>
 
     </div>
