--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -3,7 +3,7 @@
 <!--<section id="banner">-->
 
     <!-- carousel -->
-    <section id="banner" class="carousel slide carousel-fade" style="z-index: -999;" data-ride="carousel">
+    <section id="banner" class="carousel slide carousel-fade" style="z-index: -999; position: 50% 50%" data-ride="carousel">
 
       <!-- Indicators -->
       <ul class="carousel-indicators">
