--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -3,46 +3,53 @@
 <!--<section id="banner">-->
 
     <!-- carousel -->
-    <section id="banner" class="carousel slide carousel-fade" style="z-index: -999; position: 50% 50%" data-ride="carousel">
+    <section id="banner" class="carousel slide carousel-fade" style=" position: 50% 50%" data-ride="carousel">
 
       <!-- Indicators -->
       <ul class="carousel-indicators">
-        <li data-target="#demo" data-slide-to="0" class="active"></li>
-        <li data-target="#demo" data-slide-to="1"></li>
+        <li data-target="#banner" data-slide-to="0" class="active"></li>
+        <li data-target="#banner" data-slide-to="1"></li>
+        <li data-target="#banner" data-slide-to="2"></li>
+        <li data-target="#banner" data-slide-to="3"></li>
+        <li data-target="#banner" data-slide-to="4"></li>
+        <li data-target="#banner" data-slide-to="5"></li>
+        <li data-target="#banner" data-slide-to="6"></li>
+        <li data-target="#banner" data-slide-to="7"></li>
       </ul>
 
       <!-- The slideshow -->
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="assets/img/banner/banner1.jpg" alt="maple leaf"/>
+          <img src="{{ site.baseurl }}/assets/img/banner/banner1.jpg" alt="maple leaf"/>
         </div>
         <div class="carousel-item">
-          <img src="assets/img/banner/AustraliaSydneySkyline_scaled2.jpg" alt="Sydney skyline"/>
+          <img src="{{ site.baseurl }}/assets/img/banner/AustraliaSydneySkyline_scaled2.jpg" alt="Sydney skyline"/>
         </div>
         <div class="carousel-item">
-          <img src="assets/img/banner/CanadaNaturebanner_scaled.jpg" alt="Chicago"/>
+          <img src="{{ site.baseurl }}/assets/img/banner/CanadaNaturebanner_scaled.jpg" alt="Chicago"/>
         </div>
         <div class="carousel-item">
-          <img src="assets/img/banner/CanadaTorontoSkyline3_scaled.jpg" alt="Toronto skyline"/>
+          <img src="{{ site.baseurl }}/assets/img/banner/CanadaTorontoSkyline3_scaled.jpg" alt="Toronto skyline"/>
         </div>
         <div class="carousel-item">
-          <img src="assets/img/banner/NZMilfordSound3.jpg" alt="Milford Sound"/>
+          <img src="{{ site.baseurl }}/assets/img/banner/NZMilfordSound3.jpg" alt="Milford Sound"/>
         </div>
         <div class="carousel-item">
-          <img src="assets/img/banner/USGoldenGateBridge.jpg" alt="Golden Gate Bridge"/>
+          <img src="{{ site.baseurl }}/assets/img/banner/USGoldenGateBridge.jpg" alt="Golden Gate Bridge"/>
         </div>
         <div class="carousel-item">
-          <img src="assets/img/banner/ChinaShanghaiBanner2.jpg" alt="Shanghai"/>
+          <img src="{{ site.baseurl }}/assets/img/banner/ChinaShanghaiBanner2.jpg" alt="Shanghai"/>
         </div>
         <div class="carousel-item">
-          <img src="assets/img/banner/AustraliaNaturebanner.jpg" alt="Australian Nature"/>
+          <img src="{{ site.baseurl }}/assets/img/banner/AustraliaNaturebanner.jpg" alt="Australian Nature"/>
         </div>
+      </div>
 
       <!-- Left and right controls -->
-      <a class="carousel-control-prev" href="#demo" data-slide="prev">
+      <a class="carousel-control-prev" href="#banner" role="button" data-slide="prev">
         <span class="carousel-control-prev-icon"></span>
       </a>
-      <a class="carousel-control-next" href="#demo" data-slide="next">
+      <a class="carousel-control-next" href="#banner" role="button" data-slide="next">
         <span class="carousel-control-next-icon"></span>
       </a>
 
