remove unwanted sections

--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -57,7 +57,7 @@
     <div class="wrapper">
     <div class="content" style="position:absolute; top:5px; z-index:999;">
       <h1 class="title">{% if site.banner-title %}{{ site.banner-title }}{% else %}Emigratie Adviesbureau Hiltemann</br>
-        <p>Thuis in het buitenland</p>{% endif %}</h1>
+        <p class="sub_title">Thuis in het buitenland</p>{% endif %}</h1>
 
     </div>
   </div>
