--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3991,7 +3991,8 @@ cite {
 #banner .content .title {
   font-size: 3.5rem;
   margin: 0 0 1rem 0;
-  position: absolute;
+  position: relative;
+  width: 40%;
 }
 
 #banner .content .sub_title {
