main stukje aangepast

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -9,7 +9,7 @@ layout: default
   <header></header>
   <div class="entry_content">
   <section class="intro cf">
-    EAH zorgt al meer dan 20 jaar voor verantwoorde begeleiding van particulieren en bedrijven die een visum nodig hebben om te werken, studeren of permanent te wonen in Australië, Canada, Nieuw-Zeeland, de Verenigde Staten, of China Japan en Taiwan. Ook voor overige landen bieden wij op-maat begeleiding.
+    EAH zorgt al meer dan 20 jaar voor verantwoorde begeleiding van mensen die een visum nodig hebben om te werken, studeren of permanent te wonen in Australië, Canada, Nieuw-Zeeland, de Verenigde Staten, China, Japan en Taiwan. Wilt u personeel uitzenden? Dan zorgen wij voor het juiste visum. Heeft u interesse in een ander land? Ook dan bieden wij op-maat begeleiding.
 
   </section>
   </div>
