--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,13 +2,17 @@
 <header class="main_header">
   <a href="{{site.baseurl}}/" class="logo">{% if site.logo %}{{site.logo}}{% else %}E<span>AH</span> Thuis in het buitenland{% endif %}</a>
   <nav class="main_menu">
-    <a href="{{site.baseurl}}/australia/">Australie</a>
-    <a href="{{site.baseurl}}/canada/">Canada</a>
-    <a href="{{site.baseurl}}/new-zealand/">Nieuw-Zeeland</a>
-    <a href="{{site.baseurl}}/united-states/">Verenigde Staten</a>
-    <a href="{{site.baseurl}}/chinaentaiwan/">China, Japan en Taiwan</a>
-    <a href="{{site.baseurl}}/Diensten/">Overige landen</a>
+    <div class="mydropdown-menu">
+     <span> Kies uw land </span>
+     <div class="mydropdown-content" >
+       <a href="{{site.baseurl}}/australie/">Australie</a></br>
+       <a href="{{site.baseurl}}/canada/">Canada</a></br>
+       <a href="{{site.baseurl}}/new-zealand/">Nieuw-Zeeland</a></br>
+       <a href="{{site.baseurl}}/united-states/">Verenigde Staten</a></br>
+       <a href="{{site.baseurl}}/chinajapanentaiwan/">China, Japan en Taiwan</a></br>
+     </div>
+    </div>
+    <a href="{{site.baseurl}}/bedrijven/">Bedrijven</a>
     <a href="{{site.baseurl}}/contact/">Contact</a>
-
   </nav>
 </header> <!-- End Section Header -->
