--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3967,6 +3967,35 @@ cite {
   margin-left: 2rem;
 }
 
+.main_header nav .mydropdown-content a {
+  margin-left: 0;
+}
+
+.mydropdown-menu {
+  position: relative;
+  display: inline-block;
+  text-decoration: none;
+  margin-left: 2rem;
+  color: #ffffff;
+}
+
+.mydropdown-content {
+  display: none;
+  position: absolute;
+  min-width: 250px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  padding: 12px 16px;
+  z-index: 1;
+  color: #ffffff;
+  text-decoration: none;
+  margin-left: 0rem;
+  text-align: left;
+}
+
+.mydropdown-menu:hover .mydropdown-content {
+  display: block;
+}
+
 #banner {
   position: relative;
 }
