--- a/_layouts/country.html
+++ b/_layouts/country.html
@@ -11,7 +11,7 @@ layout: default
         <img src={{ "/assets/img/" | prepend: site.baseurl | append : page.img}} alt="{{page.title}}">
       </div>
       <div class="post_description">
-        <p class="post_meta">{{page.date | date: '%Y, %b %d'}}</p>
+        <!--<p class="post_meta">{{page.date | date: '%Y, %b %d'}}</p>-->
         <h1 class="post_title">{{page.title}}</h1>
       </div>
     </header> <!-- End Header -->
