aanpassingen main page

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -9,7 +9,7 @@ layout: default
   <header></header>
   <div class="entry_content">
   <section class="intro cf">
-    EAH zorgt al meer dan 20 jaar voor verantwoorde begeleiding van mensen die een visum nodig hebben om te werken, studeren of permanent te wonen in Australië, Canada, Nieuw-Zeeland, de Verenigde Staten, China, Japan en Taiwan. Wilt u personeel uitzenden? Dan zorgen wij voor het juiste visum. Heeft u interesse in een ander land? Ook dan bieden wij op-maat begeleiding.
+    EAH zorgt al meer dan 20 jaar voor verantwoorde begeleiding van mensen die een visum nodig hebben om te werken, studeren of permanent te wonen in Australië, Canada, Nieuw-Zeeland, de Verenigde Staten, China, Japan en Taiwan. Wilt u personeel uitzenden? Ook dan zorgen wij voor het juiste visum. Heeft u interesse in een ander land? Wij helpen u op weg en bieden op-maat advies.
 
   </section>
   </div>
@@ -29,23 +29,23 @@ layout: default
   <section>
   <h2> EAH biedt onder andere de volgende diensten</h2>
 
-  <h3> Volledige Visum Aanvraag</h3>
+  <p><h4> Volledige Visum Aanvraag</h4></p>
   <p>Efficiënte begeleiding en een gerichte belangenbehartiging bij de visumaanvraag in het kader van de wetgeving van het betreffende land.</p>
 
-  <h3> Visum Check</h3>
+  <h4> Visum Check</h4>
   <p> Wilt u weten of u in aanmerking komt voor emigratie naar Australie, Canada, Nieuw-Zeeland of de Verenigde Staten? Stuur vrijblijvend uw CV op, en wij beoordelen uw kansen binnen een week.</p>
 
-  <h3>Begeleiding voor bedrijven</h3>
-  <p>Begeleiding bij het uitsturen van werknemers, het opzetten van een bedrijf, of zaken doen in het buitenland.<p/>
+  <h4>Begeleiding voor bedrijven</h4>
+  <p>Begeleiding bij het uitzenden van personeel, het opzetten van een bedrijf, of zaken doen in het buitenland.<p/>
 
-  <h3>Beperkte begeleiding voor doe-het-zelvers</h3>
+  <h4>Beperkte begeleiding voor doe-het-zelvers</h4>
   <p>Doet u de aanvraag liever zelf? Wij bieden ook op-maat begeleiding op uurbasis.<p/>
 
-  <h3> Overige landen</h3>
+  <h4> Overige landen</h4>
   <p>Wij bieden op-maat advies bij verkenning van uw kansen om te kunnen emigreren naar overige bestemmingen. We zoeken alles voor u uit en helpen op een ad-hoc basis. We stellen samen met u een traject en tarief vast.
 </p>
 
-  <h3>Meer Informatie? </h3>
+  <h4>Meer Informatie? </h4>
   <p> Heeft u interesse in een van onze diensten? Neem dan <a href="{{ site.baseurl }}/contact">contact</a> met ons op.<p/>
 
   <p> Of klik hierboven op het gewenste land voor meer informatie.<p/>
