--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,11 +5,12 @@
     <div class="mydropdown-menu">
      <span> Kies uw land </span>
      <div class="mydropdown-content" >
-       <a href="{{site.baseurl}}/australie/">Australie</a></br>
-       <a href="{{site.baseurl}}/canada/">Canada</a></br>
-       <a href="{{site.baseurl}}/new-zealand/">Nieuw-Zeeland</a></br>
-       <a href="{{site.baseurl}}/united-states/">Verenigde Staten</a></br>
-       <a href="{{site.baseurl}}/chinajapanentaiwan/">China, Japan en Taiwan</a></br>
+       <a href="{{site.baseurl}}/countries/australie/">Australie</a></br>
+       <a href="{{site.baseurl}}/countries/canada/">Canada</a></br>
+       <a href="{{site.baseurl}}/countries/new-zealand/">Nieuw-Zeeland</a></br>
+       <a href="{{site.baseurl}}/countries/united-states/">Verenigde Staten</a></br>
+       <a href="{{site.baseurl}}/countries/china-japan-taiwan/">China, Japan en Taiwan</a></br>
+       <a href="{{site.baseurl}}/countries/overige-landen/">Overige Bestemmingen</a></br>
      </div>
     </div>
     <a href="{{site.baseurl}}/bedrijven/">Bedrijven</a>
