service layout tweak

--- a/_layouts/country.html
+++ b/_layouts/country.html
@@ -28,8 +28,10 @@ layout: default
                     {% endif %}
                   </a>
                   <a href="{{post.url | prepend: site.baseurl}}">
+                    <div class="service">
                     <div class="chapter_inner">
                       <h3 class="chapter_title">{{post.title}}</h3>
+                    </div>
                     </div>
                   </a>
                 </div>
