main page lettegrootte veranderd en canada stukjes aangepast voor bedrijen en emigreren

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -27,26 +27,26 @@ layout: default
   <div class="entry_content">
 
   <section>
-  <h2> EAH biedt onder andere de volgende diensten</h2>
+  <p><h5><strong> EAH biedt onder andere de volgende diensten: </strong></h5></p>
 
-  <p><h4> Volledige Visum Aanvraag</h4></p>
-  <p>Efficiënte begeleiding en een gerichte belangenbehartiging bij de visumaanvraag in het kader van de wetgeving van het betreffende land.</p>
+  <p><strong> Volledige Visum Aanvraag</strong><br/>
+  Efficiënte begeleiding en een gerichte belangenbehartiging bij de visumaanvraag in het kader van de wetgeving van het betreffende land.
 
-  <h4> Visum Check</h4>
-  <p> Wilt u weten of u in aanmerking komt voor emigratie naar Australie, Canada, Nieuw-Zeeland of de Verenigde Staten? Stuur vrijblijvend uw CV op, en wij beoordelen uw kansen binnen een week.</p>
+  <p><strong> Visum Check</strong><br/>
+  Wilt u weten of u in aanmerking komt voor emigratie naar Australie, Canada, Nieuw-Zeeland of de Verenigde Staten? Stuur vrijblijvend uw CV op, en wij beoordelen uw kansen binnen een week.</p>
 
-  <h4>Begeleiding voor bedrijven</h4>
-  <p>Begeleiding bij het uitzenden van personeel, het opzetten van een bedrijf, of zaken doen in het buitenland.<p/>
+  <p><strong> Begeleiding voor bedrijven</strong><br/>
+  Begeleiding bij het uitzenden van personeel, het opzetten van een bedrijf, of zaken doen in het buitenland.<p/>
 
-  <h4>Beperkte begeleiding voor doe-het-zelvers</h4>
-  <p>Doet u de aanvraag liever zelf? Wij bieden ook op-maat begeleiding op uurbasis.<p/>
+  <p><strong> Beperkte begeleiding voor doe-het-zelvers</strong><br/>
+  Doet u de aanvraag liever zelf? Wij bieden ook op-maat begeleiding op uurbasis.<p/>
 
-  <h4> Overige landen</h4>
-  <p>Wij bieden op-maat advies bij verkenning van uw kansen om te kunnen emigreren naar overige bestemmingen. We zoeken alles voor u uit en helpen op een ad-hoc basis. We stellen samen met u een traject en tarief vast.
+  <p><strong> Overige landen</strong><br/>
+  Wij bieden op-maat advies bij verkenning van uw kansen om te kunnen emigreren naar overige bestemmingen. We zoeken alles voor u uit en helpen op een ad-hoc basis. We stellen samen met u een traject en tarief vast.
 </p>
 
-  <h4>Meer Informatie? </h4>
-  <p> Heeft u interesse in een van onze diensten? Neem dan <a href="{{ site.baseurl }}/contact">contact</a> met ons op.<p/>
+  <p><strong> Meer Informatie?</strong><br/>
+  Heeft u interesse in een van onze diensten? Neem dan <a href="{{ site.baseurl }}/contact">contact</a> met ons op.<p/>
 
   <p> Of klik hierboven op het gewenste land voor meer informatie.<p/>
 
