--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -5,7 +5,13 @@
     <!-- carousel -->
     <section id="banner" class="carousel slide carousel-fade" data-ride="carousel">
 
-      <!-- Indicators -->
+      <!--</div>-->
+      <div class="content">
+        <h1 class="title">{% if site.banner-title %}{{ site.banner-title }}{% else %}Emigratie Adviesbureau Hiltemann
+        <br/><span class="sub_title">Thuis in het buitenland</span>{% endif %}</h1>
+      </div>
+
+      <!-- Indicators
       <ul class="carousel-indicators">
         <li data-target="#banner" data-slide-to="0" class="active"></li>
         <li data-target="#banner" data-slide-to="1"></li>
@@ -16,6 +22,7 @@
         <li data-target="#banner" data-slide-to="6"></li>
         <li data-target="#banner" data-slide-to="7"></li>
       </ul>
+      -->
 
       <!-- The slideshow -->
       <div class="carousel-inner">
@@ -45,20 +52,14 @@
         </div>
       </div>
 
-      <!-- Left and right controls -->
+      <!-- Left and right controls
       <a class="carousel-control-prev" href="#banner" role="button" data-slide="prev">
         <span class="carousel-control-prev-icon"></span>
       </a>
       <a class="carousel-control-next" href="#banner" role="button" data-slide="next">
         <span class="carousel-control-next-icon"></span>
       </a>
+      -->
 
-    <!--</div>-->
-    <div class="wrapper">
-    <div class="content" style="position:absolute; top:5px; z-index:999;">
-      <h1 class="title">{% if site.banner-title %}{{ site.banner-title }}{% else %}Emigratie Adviesbureau Hiltemann</br>
-        <p class="sub_title">Thuis in het buitenland</p>{% endif %}</h1>
 
-    </div>
-  </div>
 </section> <!-- End Section Banner -->
