--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -11,6 +11,24 @@ layout: default
   <section class="intro cf">
     EAH zorgt al meer dan 20 jaar voor verantwoorde begeleiding van mensen die een visum nodig hebben om te werken, studeren of permanent te wonen in Australië, Canada, Nieuw-Zeeland, de Verenigde Staten, China, Japan en Taiwan. Wilt u personeel uitzenden? Ook dan zorgen wij voor het juiste visum. Heeft u interesse in een ander land? Wij helpen u op weg en bieden op-maat advies.
 
+    <section>
+    <p><h5>EAH biedt onder andere de volgende diensten: </h5></p>
+
+    <p><strong> Visum Check</strong><br/>
+    Wilt u weten of u in aanmerking komt voor emigratie naar Australie, Canada, Nieuw-Zeeland of de Verenigde Staten? Stuur vrijblijvend uw CV op, en wij beoordelen uw kansen binnen een week.</p>
+
+    <p><strong> Volledige Visum Aanvraag</strong><br/>
+    Efficiënte begeleiding en een gerichte belangenbehartiging bij de visumaanvraag in het kader van de wetgeving van het betreffende land.
+
+    <p><strong> Begeleiding voor bedrijven</strong><br/>
+    Begeleiding bij het uitzenden van personeel, het opzetten van een bedrijf, of zaken doen in het buitenland.<p/>
+
+    <p><strong> Beperkte begeleiding voor doe-het-zelvers</strong><br/>
+    Doet u de aanvraag liever zelf? Wij bieden ook op-maat begeleiding op uurbasis.<p/>
+
+    <p><strong> Meer Informatie?</strong><br/>
+    Heeft u interesse in een van onze diensten? Neem dan <a href="{{ site.baseurl }}/contact">contact</a> met ons op. Of klik hieronder op het gewenste land voor meer informatie.<p/>
+
   </section>
   </div>
   <!--</article>-->
@@ -26,29 +44,6 @@ layout: default
   <header></header>
   <div class="entry_content">
 
-  <section>
-  <p><h5><strong> EAH biedt onder andere de volgende diensten: </strong></h5></p>
-
-  <p><strong> Volledige Visum Aanvraag</strong><br/>
-  Efficiënte begeleiding en een gerichte belangenbehartiging bij de visumaanvraag in het kader van de wetgeving van het betreffende land.
-
-  <p><strong> Visum Check</strong><br/>
-  Wilt u weten of u in aanmerking komt voor emigratie naar Australie, Canada, Nieuw-Zeeland of de Verenigde Staten? Stuur vrijblijvend uw CV op, en wij beoordelen uw kansen binnen een week.</p>
-
-  <p><strong> Begeleiding voor bedrijven</strong><br/>
-  Begeleiding bij het uitzenden van personeel, het opzetten van een bedrijf, of zaken doen in het buitenland.<p/>
-
-  <p><strong> Beperkte begeleiding voor doe-het-zelvers</strong><br/>
-  Doet u de aanvraag liever zelf? Wij bieden ook op-maat begeleiding op uurbasis.<p/>
-
-  <p><strong> Overige landen</strong><br/>
-  Wij bieden op-maat advies bij verkenning van uw kansen om te kunnen emigreren naar overige bestemmingen. We zoeken alles voor u uit en helpen op een ad-hoc basis. We stellen samen met u een traject en tarief vast.
-</p>
-
-  <p><strong> Meer Informatie?</strong><br/>
-  Heeft u interesse in een van onze diensten? Neem dan <a href="{{ site.baseurl }}/contact">contact</a> met ons op.<p/>
-
-  <p> Of klik hierboven op het gewenste land voor meer informatie.<p/>
 
   </section>
   </article>
