--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3990,11 +3990,12 @@ cite {
 .mydropdown-content {
   display: none;
   position: absolute;
-  min-width: 250px;
+  min-width: 200px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   padding: 12px 16px;
   z-index: 1;
   color: #ffffff;
+  background: #1c1c1ccc;
   text-decoration: none;
   margin-left: 0rem;
   text-align: left;
