--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4115,6 +4115,21 @@ div.service {
   background: rgba(0, 0, 0, 0.5);
 }
 
+.service-heading{
+  font-size: 1.3rem;
+}
+
+.text-muted {
+  font-size: 0.9rem;
+}
+
+.slogan {
+  color: rgba(192, 51, 74, 0.9);
+  font-style: italic;
+  font-weight: 700;
+  margin-bottom: 2rem;
+}
+
 .chapters .country {
   position: absolute;
   display: block;
