add schemas.org markup

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -26,4 +26,22 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <!-- local -->
 	<link rel="stylesheet" href="{{ "/assets/css/main.css" | prepend: site.baseurl }}">
+
+    <script type="application/ld+json">
+    {
+      "@context" : "http://schema.org",
+      "@type" : "LocalBusiness",
+      "name" : "Emigratie Adviesbureau Hiltemann",
+      "telephone" : "+31 644 657 859",
+      "email" : "paulhiltemann@ziggo.nl",
+      "url" : "https://emigratie-adviesbureau-hiltemann.com/",
+      "address" : {
+        "@type" : "PostalAddress",
+        "streetAddress" : "Fretweide 27",
+        "addressLocality" : "Zoetermeer",
+        "addressCountry" : "Nederland",
+        "postalCode" : "2727HG"
+      }
+   }
+   </script>
 </head>
