--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -9,7 +9,7 @@ layout: default
   <header></header>
   <div class="entry_content">
   <section class="intro cf">
-    <h3 class="slogan"><a class="logo">EAH</a> - de meeste ervaring tegen de laagste prijs!</h3>
+    <h3 class="slogan"><a class="logo">EAH</a> - persoonlijke begeleiding tegen de laagste prijs!</h3>
     EAH zorgt al meer dan 20 jaar voor verantwoorde begeleiding van mensen die een visum nodig hebben om te werken, studeren of permanent te wonen in Australië, Canada, Nieuw-Zeeland, de Verenigde Staten, China, Japan en Taiwan. <br>
 
 Wilt u een bedrijf opzetten of personeel uitzenden? Ook dan zorgen wij voor het juiste visum. Heeft u interesse in een ander land? Wij helpen u op weg en bieden op-maat advies.
