--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,6 +17,7 @@
 	<meta name="apple-mobile-web-app-status-bar-style" content="#d25469">
 	<!-- Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="{{ "/assets/fonts/font-awesome/css/font-awesome.min.css" | prepend: site.baseurl }}">
 	<!-- Styles -->
     <!-- Bootstrap -->
