--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4103,7 +4103,7 @@ cite {
 .chapters .chapter_inner .chapter_title {
   font-size: 1.75rem;
   font-weight: 400;
-  margin: 0 0 -0.5rem 0;
+  margin: 0 0 0.5rem 0;
 }
 
 div.service {
@@ -4141,7 +4141,7 @@ div.service {
   width: 100%;
   min-height: 25%;
   position: absolute;
-  bottom: 0;
+  bottom: 8%;
 }
 
 .chapters .service .chapter_inner .chapter_title {
