--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -10,9 +10,7 @@ layout: default
   <div class="entry_content">
   <section class="intro cf">
     <h3 class="slogan"><a class="logo">EAH</a> - persoonlijke begeleiding tegen de laagste prijs!</h3>
-    EAH zorgt al meer dan 20 jaar voor verantwoorde begeleiding van mensen die een visum nodig hebben om te werken, studeren of permanent te wonen in Australië, Canada, Nieuw-Zeeland, de Verenigde Staten, China, Japan en Taiwan. <br>
-
-Wilt u een bedrijf opzetten of personeel uitzenden? Ook dan zorgen wij voor het juiste visum. Heeft u interesse in een ander land? Wij helpen u op weg en bieden op-maat advies.
+    EAH zorgt al meer dan 20 jaar voor verantwoorde begeleiding van mensen die een visum nodig hebben om te werken, studeren of permanent te wonen in Australië, Canada, Nieuw-Zeeland, de Verenigde Staten, China, Japan en Taiwan. Voor zowel particulieren als bedrijven. Heeft u interesse in een ander land? Wij helpen u op weg en bieden op-maat advies.
   </section>
   </div>
   <!--</article>-->
